--- a/install
+++ b/install
@@ -6,3 +6,4 @@ ssh-keygen -t ed25519 -C "your_email@example.com"
 /root/.ssh - папка скрыта по умолчанию
 sudo ssh -T git@github.com       -> yes
 sudo apt install composer
+sudo apt install apache2
