--- a/install
+++ b/install
@@ -7,3 +7,6 @@ ssh-keygen -t ed25519 -C "your_email@example.com"
 sudo ssh -T git@github.com       -> yes
 sudo apt install composer
 sudo apt install apache2
+
+Если index.php читается как текст
+sudo apt update && sudo apt install php libapache2-mod-php
