--- a/install
+++ b/install
@@ -13,3 +13,6 @@ sudo apt update && sudo apt install php libapache2-mod-php
 
 sudo apt install snapd -y
 sudo snap install postman
+
+включить apache_mod_rewrite, для единой точки входа
+sudo a2enmod rewrite
