--- a/install
+++ b/install
@@ -16,3 +16,6 @@ sudo snap install postman
 
 включить apache_mod_rewrite, для единой точки входа
 sudo a2enmod rewrite
+
+Ввести текстовую команду sudo apt install xrdp и нажать «Ввод».
+Провести активацию программы командой sudo systemctl enable xrdp.
